# cady

./: .gitignore  AGENTS.md  HANDOFF.md  IDEAS.md  NOTICE  README.md  new-api.md  pyproject.toml  requirements-dev.txt
.plans/3d-dxf-import/: files.md  spec.md  tasks.md
.plans/affine-values/: spec.md  tasks.md
.plans/basic-viewer-v1/: spec.md  tasks.md
.plans/files-api/: files.md  spec.md  tasks.md
.plans/geometry-model-simplification/: ideal.md
.plans/geometry-module-refactor/: spec.md  tasks.md
.plans/geometry-package-restructure/: files.md  ideal.md  spec.md  tasks.md
.plans/linesplan-wireframe-meshing/: spec.md  tasks.md
.plans/new-api-clean-implementation/: api-contract.md  comparison.md  data-flows.md  files.md  ideal.md  spec.md  tasks.md  testing.md
.plans/operations-refactor/: spec.md  tasks.md
.plans/plotting-visualisation/: files.md  spec.md  tasks.md
.plans/polyline-to-mesh/: spec.md  tasks.md
.plans/remove-numeric-package/: spec.md  tasks.md
.plans/triangulation-meshing-split/: files.md  spec.md  tasks.md  testing.md
.plans/view-render-architecture/: data-flows.md  files.md  spec.md  tasks.md  testing.md
.plans/view-visualisation-unification/: ideal.md  spec.md  tasks.md
.plans/wireframe-type/: plan.md
.research/linesplan-wireframe-meshing/: FINDINGS.md  PLAN.md
.warden/: preference-lock.json
.warden/plans/: 2026-05-08-pyseas-cad-stage-1.md  2026-05-08-pyseas-cad-stage-1.yaml  2026-05-08-pyseas-cad-stage-2-model.md  2026-05-08-pyseas-cad-stage-2-model.yaml  2026-05-08-pyseas-cad-stage-2-model.yaml.state.json  2026-05-08-pyseas-cad-stage-3-dxf-production.md  2026-05-08-pyseas-cad-stage-3-dxf-production.yaml  2026-05-08-pyseas-cad-stage-3-dxf-production.yaml.state.json  2026-05-08-pyseas-cad-stage-4-dimensions.md  2026-05-08-pyseas-cad-stage-5-step-v1.md  (+6 more)
artifacts/: plate_box.step
docs/: api.md  architecture.md  development.md  examples.md  getting-started.md  index.md  note-jun-23.md  object-model.md  pointcloud.md  visualisation.md
docs/files/: index.md  (+2 more)
examples/: README.md  model_plate.py  plate_with_hole.py  production_dxf.py
notes/: dxf-format-cheatsheet.md  geometry objects.md  note-jun-23 to put into knowledge.md  operations.md  step-format-cheatsheet.md  viewing.md
tests/: conftest.py  test_smoke_import.py  test_utils.py
worker/: close-implementation.md  close-to-plane.md  fix-algorithmic-bugs.md  review-correctness.md  review-dxf-contract.md  review-imports.md  snap-tolerance.md  wireframe-implementation.md
(+560 files in other folders)
