[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cady"
version = "0.1.0"
description = "Small write-only CAD geometry package for DXF, STL, and AP214 STEP output."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "steputils>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cady"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src/cady"]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
