[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cady"
version = "0.1.0"
description = "Small native CAD geometry package with DXF, STL, and STEP import/export tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=2.4.6", "steputils>=0.1"]

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.10",
]
view = [
    "pyqt6>=6.11.0",
    "vispy>=0.14",
]
all = [
    "cady[plotting,view]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cady"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src/cady"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = ["pyright>=1.1.409", "pytest>=9.0.3", "ruff>=0.15.14"]
